Enemy Spawner and Week 2 finished

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/Default.Default
 EditorStartupMap=/Game/ThirdPerson/Maps/Default.Default
-GlobalDefaultGameMode="/Script/ProjectVamsur.ProjectVamsurGameMode"
+GlobalDefaultGameMode=/Game/BluePrint/BP_ProjectVamsurGameMode.BP_ProjectVamsurGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
